# sensor-fusion-sandbox

./: .gitignore  .gitmodules  README.md
cluster_with_roi/src/: cluster_with_roi.cpp
cornerness_harris/src/: cornerness_harris.cpp
describe_keypoints/src/: describe_keypoints.cpp
descriptor_matching/src/: descriptor_matching.cpp
detect_keypoints/src/: detect_keypoints.cpp
detect_objects/src/: detect_objects_2.cpp
gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp  magnitude_sobel.cpp
kalman-lidar/: CMakeLists.txt  README.md
kalman-lidar/src/: kalman_filter.cpp  kalman_filter.h  main.cpp  tracking.cpp  tracking.h
lidar_to_camera/src/: dataStructures.h  project_lidar_to_camera.cpp  show_lidar_top_view.cpp  structIO.hpp
matlab/: Radar_Target_Generation_and_Detection.m  WRITEUP.md  cfar_1d.m  doppler_estimation.asv  doppler_estimation.m  fast_fourier_transform.asv  fast_fourier_transform.m  fft_2d.m  max_range_calculation.m  range_estimation.m
subtitles/: process_subtitles.py
ukf-generate-sigma-points/: CMakeLists.txt
ukf-generate-sigma-points/src/: main.cpp  ukf.cpp  ukf.h
